src/Shaders/Display.fs
@@ -4,6 +4,9 @@ uniform sampler2D uInputTexture;
 //! Ray tracing depth image.
 uniform sampler2D uDepthTexture;
 
+//! Gamma correction flag.
+uniform int uApplyGamma;
+
 //! Output pixel color.
 out vec4 OutColor;
 
@@ -14,6 +17,13 @@ void main (void)
   float aDepth = texelFetch (uDepthTexture, ivec2 (gl_FragCoord.xy), 0).r;
   gl_FragDepth = aDepth;
 
-  // apply gamma correction (we use gamma = 2)
-  OutColor = vec4 (sqrt (aColor.rgb), aColor.a);
+  if (uApplyGamma == 1)
+  {
+    // apply gamma correction (we use gamma = 2)
+    OutColor = vec4 (sqrt (aColor.rgb), aColor.a);
+  }
+  else
+  {
+    OutColor = aColor;
+  }
 }
